[tool.poetry]
name = "sc-gnn"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "sc_gnn"}]

[tool.poetry.dependencies]
python = "^3.9"
datasets = "^2.13.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
